# Reggen

./: .gitignore  README.md
.github/workflows/: ci.yml
dma-controller/: Makefile  README.md
dma-controller/rtl/: dma_axi_mux.sv  dma_channel.sv  dma_fifo.sv  dma_top.sv
dma-controller/specs/: dma_csr.yaml
dma-controller/syn/: dma.sdc  synth.tcl
dma-controller/syn/opensta/: README.md  dma.sdc  run.sh  sta.tcl
dma-controller/tb/cocotb/: Makefile  axi_checker.sv  sim_top.sv  test_dma.py
dma-controller/tb/uvm/: axil_if.sv  dma_ral_pkg.sv  tb_top.sv
reggen/: README.md  pyproject.toml
reggen/examples/: dma_lite.yaml  timer.yaml
reggen/reggen/: __init__.py  _helpers.py  cli.py  errors.py  ir.py  loader.py  nl2yaml.py  schema.json  validate.py
reggen/reggen/generators/: __init__.py  cheader.py  markdown.py  systemverilog.py  uvm.py
reggen/reggen/templates/: axil_csr.sv.j2  c_header.h.j2  regmap.md.j2  uvm_reg_block.sv.j2
reggen/tests/: test_cheader.py  test_functional.py  test_golden.py  test_ir.py  test_markdown.py  test_nl2yaml.py  test_sv.py  test_uvm.py  test_validate.py
reggen/tests/functional/: Makefile  test_csr.py
reggen/tests/golden/: dma_lite.h  dma_lite.md  dma_lite.sv  dma_lite.uvm.sv  timer.h  timer.md  timer.sv  timer.uvm.sv
sta-analyzer/: README.md  pyproject.toml
sta-analyzer/sta_analyzer/: __init__.py  analyze.py  cli.py  llm.py  parser.py
sta-analyzer/tests/: test_sta_analyzer.py
sta-analyzer/tests/fixtures/: opensta_sample.rpt  quartus_dma.rpt
