[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reggen"
version = "0.1.0"
description = "Generate SystemVerilog CSR slaves, UVM register blocks, C headers, and Markdown docs from a single YAML register-map spec."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Goutham Krishna" }]
dependencies = [
    "PyYAML>=6.0",
    "jsonschema>=4.20",
    "Jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
nl = ["anthropic>=0.40"]

[project.scripts]
reggen = "reggen.cli:main"

[tool.setuptools]
packages = ["reggen", "reggen.generators"]

[tool.setuptools.package-data]
reggen = ["schema.json", "templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# tests/functional/ holds cocotb tests run by their own Makefile/runner, not by
# pytest directly; the tests/test_functional.py wrapper invokes them.
norecursedirs = ["functional", "sim_build"]
