[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sta-analyzer"
version = "0.1.0"
description = "Parse STA timing reports (Quartus/OpenSTA), surface critical-path violations, and propose pipeline-insertion candidates — optionally reviewed by Claude."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Goutham Krishna" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
llm = ["anthropic>=0.40"]

[project.scripts]
sta-analyze = "sta_analyzer.cli:main"

[tool.setuptools]
packages = ["sta_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
